@@ -22,7 +22,7 @@ foreach p {
     arg_def cmd_def opt_def tkoption_def see_also keywords example
     example_begin example_end nl arg cmd opt emph comment
     sectref syscmd method option widget fun type package class var
-    file uri term const copyright
+    file uri term const copyright namespace
 } {
     proc fmt_$p {args} {return ""}
 }
